# LongMarch

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  vcpkg.json
code/: CMakeLists.txt  long_march.cpp  long_march.h
code/grassland/: CMakeLists.txt  grassland.cpp  grassland.h
code/grassland/algebra/: CMakeLists.txt  algebra.cpp  algebra.h  algebra_util.h  algebra_utils.h  polynomial.h
code/grassland/d3d12/: CMakeLists.txt  adapter.cpp  adapter.h  buffer.cpp  buffer.h  command_allocator.cpp  command_allocator.h  command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  d3d12util.cpp  d3d12util.h  descriptor_heap.cpp  descriptor_heap.h  device.cpp  device.h  device_feature_requirement.cpp  device_feature_requirement.h  direct3d12.cpp  direct3d12.h  dxgi_factory.cpp  dxgi_factory.h  fence.cpp  fence.h  image.cpp  image.h  pipeline_state.cpp  pipeline_state.h  root_signature.cpp  root_signature.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h
code/grassland/data_structure/: data_structure.cpp  data_structure.h  data_structure_util.h  data_structure_utils.h
code/grassland/data_structure/acceleration_structure_mesh/: acceleration_structure_mesh.h
code/grassland/data_structure/grid/: grid.h  grid_util.h  grid_utils.h  linear_grid.h  linear_grid_cuda.h  linear_grid_view.h  mac_grid.h
code/grassland/geometry/: CMakeLists.txt  area_volume.h  axis_aligned_bounding_box.h  common.h  continuous_collision_detection.h  field.h  geometry.cpp  geometry.h  geometry_utils.h  marching_cubes.h  mesh.cpp  mesh.h  point_to_mesh.h  ray.h  spd_projection.h  triangle.h
code/grassland/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
code/grassland/physics/: CMakeLists.txt  basic_functions.cpp  basic_functions.h  dihedral_angle.cpp  dihedral_angle.h  elastic_models.cpp  elastic_models.h  fem_elements.cpp  fem_elements.h  geometry_sdf.cpp  geometry_sdf.h  hessian_tensor.cpp  hessian_tensor.h  physics.cpp  physics.h  physics_util.cpp  physics_util.h
code/grassland/util/: CMakeLists.txt  double_ptr.cpp  double_ptr.h  log.cpp  log.h  string_convert.cpp  string_convert.h  util.cpp  util.h  vendor_id.cpp  vendor_id.h
code/grassland/utils/: CMakeLists.txt  double_ptr.cpp  double_ptr.h  event_manager.h  log.cpp  log.h  utils.cpp  utils.h
code/grassland/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_creation_assist.cpp  device_creation_assist.h  device_procedures.cpp  device_procedures.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  instance_procedures.cpp  instance_procedures.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  (+20 more)
code/grassland/vulkan/core/: core.cpp  core.h  core_object.cpp  core_object.h  dynamic_buffer.h  dynamic_object.h  imgui_manager.cpp  imgui_manager.h  static_buffer.h
code/grassland/vulkan/raytracing/: acceleration_structure.cpp  acceleration_structure.h  ray_tracing_pipeline.cpp  raytracing.h  shader_binding_table.cpp  shader_binding_table.h
demo/: CMakeLists.txt
demo/cuda_memory_test/: CMakeLists.txt  main.cu
demo/d3d12_hello_triangle/: CMakeLists.txt  d3d12app.cpp  d3d12app.h  main.cpp
demo/d3d12_hello_triangle/shaders/: main.hlsl
demo/geometry_sample/: main.cu
demo/grid_n_field_sample/: main.cpp
demo/point_to_cloud_sample/: main.cpp
demo/vulkan_hello_raytracing/: main.cpp  rtapp.cpp  rtapp.h
demo/vulkan_hello_raytracing/shaders/: raytracing.rgen  raytracing.rmiss
demo/vulkan_hello_triangle/: CMakeLists.txt  app.cpp  app.h  main.cpp
demo/vulkan_hello_triangle_dynamic_rendering/: app.cpp  app.h  main.cpp
demo/vulkan_hello_triangle_dynamic_rendering/shaders/: hello_triangle.frag
scripts/: pack_shaders.cmake
test/: AddTest.cmake  CMakeLists.txt
test/algebra/: cubic_polynomial_test.cpp
test/ccd_intersection/: main.cpp
test/cubic_polynomial/: CMakeLists.txt  main.cpp
test/geometry/: CMakeLists.txt  cubic_polynomial_test.cpp  field_interpolation_test.cpp
test/physics/: function_derivative_test.cu  function_derivative_test.h  function_derivative_test_basic_functions.cu  function_derivative_test_composed.cu  function_derivative_test_dihedral_angle.cu  function_derivative_test_elastic_model.cu  function_derivative_test_fem_element.cu  function_derivative_test_geometry_sdf.cu
