file(GLOB_RECURSE SOURCES "*.cpp" "*.h")

add_library(${GRASSLAND_SUBLIB_NAME} ${SOURCES})

list(APPEND GRASSLAND_LIBS ${GRASSLAND_SUBLIB_NAME})
set(GRASSLAND_LIBS ${GRASSLAND_LIBS} PARENT_SCOPE)

target_include_directories(${GRASSLAND_SUBLIB_NAME} PUBLIC ${LONGMARCH_INCLUDE_DIR})

target_link_libraries(${GRASSLAND_SUBLIB_NAME} PUBLIC ${EIGEN3_LIB_NAME} ${MIKKTSPACE_LIB_NAME} ${TINYOBJLOADER_LIB_NAME} grassland_util grassland_algebra)
