file(GLOB_RECURSE SOURCES "*.cpp" "*.h")

add_library(${GRASSLAND_SUBLIB_NAME} ${SOURCES})

list(APPEND GRASSLAND_LIBS ${GRASSLAND_SUBLIB_NAME})
set(GRASSLAND_LIBS ${GRASSLAND_LIBS} PARENT_SCOPE)

target_include_directories(${GRASSLAND_SUBLIB_NAME} PUBLIC ${LONGMARCH_INCLUDE_DIR} ${Vulkan_INCLUDE_DIRS})

target_link_libraries(${GRASSLAND_SUBLIB_NAME} PUBLIC ${VULKAN_LIB_NAME} ${GLFW3_LIB_NAME} ${FMT_LIB_NAME} ${VMA_LIB_NAME} ${GLSLANG_LIB_NAME} ${GLM_LIB_NAME} ${IMGUI_LIB_NAME} grassland_util grassland_imgui)
